--- a/SPUDS.html
+++ b/SPUDS.html
@@ -169,19 +169,19 @@
 					<br>
 					<div class="text-tags">
 						<a href="https://spuds/xxxx/">
-						<strong> [X] </strong>
+						<strong> [Urban planning & governance] </strong>
 						</a>
 						<br>
 						<a href="https://spuds/xxxx/">
-						<strong> [XX] </strong>
+						<strong> [Public participation] </strong>
 						</a>
 						<br>
 						<a href="https://spuds/xxxx/">
-						<strong> [XXX] </strong>
+						<strong> [Urban land policy] </strong>
 						</a>
 						<br>
 						<a href="https://spuds/xxxx/">
-						<strong> [XXXX] </strong>
+						<strong> [Housing] </strong>
 						</a>
 					</div>
 				</div>
@@ -197,10 +197,20 @@
 					[CONTACTS]
 					</span>
 					<br>
+					<div class="text-tags">
+						<a href="mailto:marija.cvetinovic@epfl.ch">
+					[marija.cvetinovic@epfl.ch]
+						</a>
+					<br>
+					</div>
 				</div>
 				<div class="footer-custom logo">
-				<img src="IAUS logo.jpg" alt="IAUS logo" style="display:block; height:100px; position:relative; margin-bottom:15px; padding:10px;">
-				<img src="Logo-CODEV.gif" alt="EPFL logo" style="display:block; height:100px; position:relative; margin-bottom:15px; padding:10px;">
+				<a href="https://spuds/team/iaus">
+					<img src="IAUS logo.jpg" alt="IAUS logo" style="display:block; height:100px; position:relative; margin-bottom:15px; padding:10px;">
+				</a>
+				<a href="https://spuds/team/epfl">
+					<img src="Logo-CODEV.gif" alt="EPFL logo" style="display:block; height:100px; position:relative; margin-bottom:15px; padding:10px;">
+				</a>
 				</div>
 			</div>
 		<!--footer-widgets-->
