reversed to the earlier version < before 2018-02-01

--- a/SPUDS.html
+++ b/SPUDS.html
@@ -93,13 +93,15 @@
 						</div>
 					</aside>
 					<div class="menu">
-						<a href="#" class="menu-button-text">
-						<hr>
-						database
-						<br>
-						[ENG]
-						<!--<hr>-->
-						</a>
+						<span>
+							<a href="#" class="menu-button-text">
+							<hr>
+							database
+							<br>
+							[ENG]
+							<!--<hr>-->
+							</a>
+						</span>
 						<a href="#" class="menu-button-text">
 						<hr>
 						database
