pages: description page template and scientific publications page draft

--- a/scientificpub.html
+++ b/scientificpub.html
@@ -23,8 +23,7 @@
 				</div>
 				<nav class="nav_bar">
 					<div class="menu-button dropdown">
-						<button  class="dropbtn">
-						[PROJECT]
+						<button  class="dropbtn">[PROJECT]
 						</button>
 						<div class="dropdown-content">
 							<a href="SPUDS.html">[DESCRIPTION]</a>
@@ -79,28 +78,124 @@
 			</div>
 		</header>
 		<div class="site-main">
-				<!--primary content area-->			
+				<!--primary content area-->	
 				<div id="primary" class="content-area">				
-					<hr  style="color:red; border-top: 1px solid;">
-					<//hr>
+					<span class="hr_main">					
+						<a href="#"> [BOOK CONTRIBUTIONS]
+						</a>
+						<a href="#"> [THESES]
+						</a>
+						<a href="#"> [JOURNAL ARTICLES]
+						</a>
+						<a href="#"> [CONFERENCE PAPERS]
+						</a>
+					</span>
 					<div class="content">
-					<h1>[DESCRIPTION]
-					</h1>
-					<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada nunc a dui ultricies, ut pretium tellus consequat. Nam iaculis malesuada imperdiet. Nam urna augue, gravida nec sem in, rhoncus hendrerit tortor. Nunc suscipit ipsum in sagittis interdum. Quisque scelerisque nunc in felis mattis, sit amet luctus nulla malesuada. Nullam ipsum metus, finibus non magna sed, eleifend tincidunt purus. Donec eget placerat urna, vel porttitor odio.
-					</p>
-					<p>
-					Praesent aliquam vitae odio ut ultricies. Nulla at metus augue. Nam posuere tristique nunc, in consectetur augue ullamcorper mollis. Fusce venenatis nec massa non sodales. Nulla facilisi. Duis quis convallis dui, sit amet sagittis metus. Quisque eu facilisis ante, ut eleifend neque. Mauris id nisi vel ex vehicula gravida. Pellentesque ligula ex, malesuada at ante venenatis, porta scelerisque nisi. Fusce scelerisque aliquet magna non convallis. Curabitur orci sapien, iaculis eget ipsum sed, cursus fringilla tortor. Mauris rutrum libero ut eros viverra, a posuere arcu auctor. Vestibulum ac purus nec arcu lobortis aliquam ac at est. Suspendisse ultrices dictum justo quis vestibulum. Cras vitae ligula pretium, pulvinar lectus sit amet, semper nisi.
-					</p>
-					<p>
-					Sed sodales felis orci, condimentum dapibus quam ornare quis. Donec a nisi eu quam cursus scelerisque. Nulla feugiat congue volutpat. Duis eu magna non felis porta molestie sed sed risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus ornare dui sit amet neque fringilla, id fringilla sapien aliquet. Morbi tortor purus, suscipit quis luctus in, dignissim vitae neque. Fusce feugiat neque ac metus pellentesque feugiat. Proin mauris risus, hendrerit ac dui ut, tincidunt pulvinar metus. Fusce in tellus non felis fermentum egestas non eget tellus. Suspendisse eget felis at velit semper rhoncus ac varius odio. Aliquam id arcu id arcu porta imperdiet ut mollis neque. Donec eu est at nulla pellentesque varius.
-					</p>
-					<p>
-					Integer pretium luctus metus eget ultricies. Morbi suscipit scelerisque magna, non tristique mauris rutrum ac. Aliquam ex mi, varius nec odio eleifend, mollis volutpat turpis. Etiam id purus augue. Aliquam euismod, felis ac pretium accumsan, arcu justo pulvinar libero, sed mattis ipsum orci vestibulum ligula. Vivamus mattis tortor faucibus tincidunt ultrices. Vivamus convallis nunc in rutrum viverra. Morbi sollicitudin ornare nunc, in ultrices metus tincidunt sit amet.
-					</p>
-					<p>
-					Nam id sollicitudin ante. Sed augue elit, posuere in nisi ac, viverra commodo metus. Sed felis nulla, ultricies imperdiet interdum non, faucibus id ipsum. Curabitur scelerisque, felis nec faucibus consequat, neque diam maximus mauris, quis dignissim massa eros eget magna. Mauris at viverra ex. Quisque non efficitur enim. Ut vitae molestie odio, eu laoreet lectus. Cras ac ultricies ligula, id porta nisi. Praesent nec accumsan odio, vitae tincidunt ipsum. Cras et dapibus sem. Fusce laoreet maximus ante, in porta purus laoreet ut. Aenean ultricies nibh nec lacus auctor sagittis.
-					</p>
+						<h1>[BOOK CONTRIBUTIONS]
+						</h1>
+						<p>
+						Zeković, Slavka; Maričić, Tamara; and Cvetinović, Marija; (2016) 
+							<strong>"Transformation of Housing Policy in a Post Socialist City: The Example of Belgrade"
+							</strong>
+						in 
+						"Regulating the City: Contemporary Urban Housing Law" 
+						from Julian Sidoli; Michel Vols; and Marvin Kiehl; 
+						</p>
+					</div>
+					<div class="content">
+						<h1>[THESES]
+						</h1>
+						<p>
+						Bajić, Tanja; (2017)
+						</p>
+						<p>
+						Cvetinović, Marija; thesis director Bolay, Jean-Claude; (2017) 
+							<strong>"Urban Development Processes: Methodological Investigation into the Complexity and Dynamics of Post-socialist Cities: Case Study of Savamala Neighbourhood in Belgrade, Serbia"
+							</strong>
+							<a href="https://infoscience.epfl.ch/record/231703/files/EPFL_TH7597.pdf">Thèse EPFL, n° 7597
+							</a>
+						Lausanne, Switzerland
+						</p>
+					</div>
+					<div class="content">
+						<h1>[JOURNAL ARTICLES]
+						</h1>
+						<p>
+						Zeković, Slavka; Vujošević, Miodrag; Bolay, Jean-Claude; Cvetinović, Marija; Živanović Miljković, Jelena; and Maričić, Tamara; (2015) 
+							<strong> "Planning and Land Policy Tools for Limiting Urban Sprawl: The Example of Belgrade" 
+							</strong>
+							<a href="http://www.doiserbia.nb.rs/img/doi/1450-569X/2015/1450-569X1533069Z.pdf ">Spatium. no.33 pp. XX-XX-X
+							</a>
+						Belgrade, Serbia
+						</p>
+						<p>
+						Zeković, Slavka; and Maričić, Tamara; (2016) 
+							<strong>"A historical prolegomenon of the legal framework and urban land policy in Serbia as a basis for urban development" 
+							</strong>
+							<a href="http://www.doiserbia.nb.rs/img/doi/1450-569X/2016/1450-569X1636067Z.pdf ">Spatium. no.36 pp. XX-XX-X
+							</a>
+						Belgrade, Serbia
+						</p>
+						<p>
+						Cvetinović, Marija; Maričić, Tamara; and Bolay, Jean-Claude;  (2016) 
+							<strong>"Participatory urban transformations in Savamala, Belgrade – capacities and limitations" 
+							</strong>
+							<a href="http://www.doiserbia.nb.rs/img/doi/1450-569X/2016/1450-569X1636015C.pdf">Spatium. no.36 pp. XX-XX-X
+							</a>
+						Belgrade, Serbia
+						</p>
+						<p>
+						Cvetinović, Marija; Nedović Budić, Zorica; and Bolay, Jean-Claude;  (2017) 
+							<strong>"Decoding Urban Development Dynamics through Actor-Network Methodological Approach" 
+							</strong>
+							<a href="xxx">Geoforum. no.82 pp. XX-XX-X
+							</a>
+						XXXXXXXXXXXXXX XXXXXXXXXX
+						</p>
+					</div>
+					<div class="content">
+						<h1>[CONFERENCE PAPERS]
+						</h1>
+						<p>
+						Zeković, Slavka; Maričić, Tamara; and Vujošević, Miodrag; (2016) 
+							<strong> "Megaprojects as Instrument of Urban Planning and Development: Example of Belgrade Waterfront Project" 
+							</strong>
+							in Tech4Dev 2016 
+							<a href="https://cooperation.epfl.ch/files/content/sites/cooperation/files/Tech4Dev%202016/1249-Zekovic-SE15-HAB_Full%20Paper.pdf">“From Innovation to Social Impact”,
+							</a>
+						Period XX-XX-X 
+						EPFL, Lausanne, Switzerland
+						</p>
+						<p>
+						Zeković, Slavka; Maričić, Tamara; and Vujošević, Miodrag; (2017) 
+							<strong> "Urban Megaprojects In Planning Of Smart Cities" 
+							</strong>
+							in 
+							<a href="https://sites.google.com/site/uep2017conference/programa-full">II International Conference URBAN E-PLANNING,
+							</a>
+						Period XX-XX-X 
+						University of Hong Kong, Hong Kong, China
+						</p>
+						<p>
+						Zeković, Slavka; and Maričić, Tamara; (2017) 
+							<strong> "Belgrade Waterfront Project as Instrument of Urban Transformation and Legal Changes of Urban Land Market" 
+							</strong>
+							in 
+							<a href="#">11th Annual Conference of International Academic Association on Planning, Law, and Property Rights (PLPR),
+							</a>
+						Period XX-XX-X 
+						University of Hong Kong, Hong Kong, China
+						</p>
+						<p>
+						Zeković, Slavka; and Maričić, Tamara; (2017) 
+							<strong> "Institutional framework and massive illegal construction in Serbian cities" 
+							</strong>
+							in 
+							<a href="#">11th Annual Conference of International Academic Association on Planning, Law, and Property Rights (PLPR),
+							</a>
+						Period XX-XX-X 
+						City, Country
+						</p>
 					</div>
 				</div>
 				<!--secondary content area-->
@@ -177,7 +272,7 @@
 					</aside>
 				</div>
 				<!--secondary content area-->
-		</div>
+			</div>
 		<!--#main-->
 	</div>
 	<!--page wrapeer-->
