academic events page

--- a/scientificpub.html
+++ b/scientificpub.html
@@ -32,7 +32,7 @@
 								</button>
 								<div class="dropdown-submenu-content">
 									<a href="scientificpub.html">[SCIENTIFIC PUBLICATIONS]</a>
-									<a href="academicpub.html">[ACADEMIC EVENTS]</a>
+									<a href="academicevent.html">[ACADEMIC EVENTS]</a>
 								</div>
 							</div>
 						</div>
@@ -81,18 +81,20 @@
 				<!--primary content area-->	
 				<div id="primary" class="content-area">				
 					<span class="hr_main">					
-						<a href="#"> [BOOK CONTRIBUTIONS]
+						<a href="#book_contributions"> [BOOK CONTRIBUTIONS]
 						</a>
-						<a href="#"> [THESES]
+						<a href="#theses"> [THESES]
 						</a>
-						<a href="#"> [JOURNAL ARTICLES]
+						<a href="#journal_articles"> [JOURNAL ARTICLES]
 						</a>
-						<a href="#"> [CONFERENCE PAPERS]
+						<a href="#conference_papers"> [CONFERENCE PAPERS]
 						</a>
 					</span>
 					<div class="content">
-						<h1>[BOOK CONTRIBUTIONS]
-						</h1>
+						<a id="book_contributions"">
+							<h1>[BOOK CONTRIBUTIONS]
+							</h1>
+						</a>
 						<p>
 						Zeković, Slavka; Maričić, Tamara; and Cvetinović, Marija; (2016) 
 							<strong>"Transformation of Housing Policy in a Post Socialist City: The Example of Belgrade"
@@ -103,8 +105,10 @@
 						</p>
 					</div>
 					<div class="content">
-						<h1>[THESES]
-						</h1>
+						<a id="theses">
+							<h1>[THESES]
+							</h1>
+						</a>
 						<p>
 						Bajić, Tanja; (2017)
 						</p>
@@ -118,8 +122,10 @@
 						</p>
 					</div>
 					<div class="content">
-						<h1>[JOURNAL ARTICLES]
-						</h1>
+						<a id="journal_articles">
+							<h1>[JOURNAL ARTICLES]
+							</h1>
+						</a>
 						<p>
 						Zeković, Slavka; Vujošević, Miodrag; Bolay, Jean-Claude; Cvetinović, Marija; Živanović Miljković, Jelena; and Maričić, Tamara; (2015) 
 							<strong> "Planning and Land Policy Tools for Limiting Urban Sprawl: The Example of Belgrade" 
@@ -154,8 +160,10 @@
 						</p>
 					</div>
 					<div class="content">
-						<h1>[CONFERENCE PAPERS]
-						</h1>
+						<a id="conference_papers">
+							<h1>[CONFERENCE PAPERS]
+							</h1>
+						</a>
 						<p>
 						Zeković, Slavka; Maričić, Tamara; and Vujošević, Miodrag; (2016) 
 							<strong> "Megaprojects as Instrument of Urban Planning and Development: Example of Belgrade Waterfront Project" 
