epfl team and lists formatting

--- a/epfl.html
+++ b/epfl.html
@@ -82,25 +82,90 @@
 				<!--primary content area-->			
 				<div id="primary" class="content-area">				
 					<hr  style="color:red; border-top: 1px solid;">
-					<//hr>
-					<div class="content">
-					<h1>[DESCRIPTION]
-					</h1>
-					<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada nunc a dui ultricies, ut pretium tellus consequat. Nam iaculis malesuada imperdiet. Nam urna augue, gravida nec sem in, rhoncus hendrerit tortor. Nunc suscipit ipsum in sagittis interdum. Quisque scelerisque nunc in felis mattis, sit amet luctus nulla malesuada. Nullam ipsum metus, finibus non magna sed, eleifend tincidunt purus. Donec eget placerat urna, vel porttitor odio.
-					</p>
-					<p>
-					Praesent aliquam vitae odio ut ultricies. Nulla at metus augue. Nam posuere tristique nunc, in consectetur augue ullamcorper mollis. Fusce venenatis nec massa non sodales. Nulla facilisi. Duis quis convallis dui, sit amet sagittis metus. Quisque eu facilisis ante, ut eleifend neque. Mauris id nisi vel ex vehicula gravida. Pellentesque ligula ex, malesuada at ante venenatis, porta scelerisque nisi. Fusce scelerisque aliquet magna non convallis. Curabitur orci sapien, iaculis eget ipsum sed, cursus fringilla tortor. Mauris rutrum libero ut eros viverra, a posuere arcu auctor. Vestibulum ac purus nec arcu lobortis aliquam ac at est. Suspendisse ultrices dictum justo quis vestibulum. Cras vitae ligula pretium, pulvinar lectus sit amet, semper nisi.
-					</p>
-					<p>
-					Sed sodales felis orci, condimentum dapibus quam ornare quis. Donec a nisi eu quam cursus scelerisque. Nulla feugiat congue volutpat. Duis eu magna non felis porta molestie sed sed risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus ornare dui sit amet neque fringilla, id fringilla sapien aliquet. Morbi tortor purus, suscipit quis luctus in, dignissim vitae neque. Fusce feugiat neque ac metus pellentesque feugiat. Proin mauris risus, hendrerit ac dui ut, tincidunt pulvinar metus. Fusce in tellus non felis fermentum egestas non eget tellus. Suspendisse eget felis at velit semper rhoncus ac varius odio. Aliquam id arcu id arcu porta imperdiet ut mollis neque. Donec eu est at nulla pellentesque varius.
-					</p>
-					<p>
-					Integer pretium luctus metus eget ultricies. Morbi suscipit scelerisque magna, non tristique mauris rutrum ac. Aliquam ex mi, varius nec odio eleifend, mollis volutpat turpis. Etiam id purus augue. Aliquam euismod, felis ac pretium accumsan, arcu justo pulvinar libero, sed mattis ipsum orci vestibulum ligula. Vivamus mattis tortor faucibus tincidunt ultrices. Vivamus convallis nunc in rutrum viverra. Morbi sollicitudin ornare nunc, in ultrices metus tincidunt sit amet.
-					</p>
-					<p>
-					Nam id sollicitudin ante. Sed augue elit, posuere in nisi ac, viverra commodo metus. Sed felis nulla, ultricies imperdiet interdum non, faucibus id ipsum. Curabitur scelerisque, felis nec faucibus consequat, neque diam maximus mauris, quis dignissim massa eros eget magna. Mauris at viverra ex. Quisque non efficitur enim. Ut vitae molestie odio, eu laoreet lectus. Cras ac ultricies ligula, id porta nisi. Praesent nec accumsan odio, vitae tincidunt ipsum. Cras et dapibus sem. Fusce laoreet maximus ante, in porta purus laoreet ut. Aenean ultricies nibh nec lacus auctor sagittis.
-					</p>
+					<div class="pers_bloc">
+						<div class="leftcontainer">
+							<a href="http://people.epfl.ch/jean-claude.bolay?lang=en">
+								<img class="picture" src="https://people.epfl.ch/cgi-bin/people/getPhoto?id=104576&amp;show=">
+							</a>	
+						</div>
+						<div class="txt_bloc">
+							<div class="name">
+								<a href="http://people.epfl.ch/jean-claude.bolay?lang=en">Bolay Jean-Claude</a>
+							</div>
+							<div class="function">
+							Director of CODEV-EPFL;
+							<br>
+							Adjunct Professor EPFL;
+							</div>
+							<div class="project-role">
+							<strong style="font-size:150%;">PROJECT COORDINATOR</strong>
+							<br>
+							CODEV-EPFL team leader
+							</div>
+						</div>
+					</div>
+					<div class="pers_bloc">
+						<div class="leftcontainer">
+							<a href="http://people.epfl.ch/jean-claude.bolay?lang=en">
+								<img class="picture" src="https://people.epfl.ch/cgi-bin/people/getPhoto?id=188094&amp;show=">
+							</a>	
+						</div>
+						<div class="txt_bloc">
+							<div class="name">
+								<a href="https://people.epfl.ch/fiona.fossati?lang=en">Fiona Fossati</a>
+							</div>
+							<div class="function">
+							Secretary;
+							<br>
+							CODEV Administration;
+							</div>
+							<div class="project-role">
+							Administrative collaborator
+							of CODEV-EPFL team
+							</div>
+						</div>
+					</div>
+					<div class="pers_bloc">
+						<div class="leftcontainer">
+							<a href="http://people.epfl.ch/jean-claude.bolay?lang=en">
+								<img class="picture" src="web.jpg">
+							</a>	
+						</div>
+						<div class="txt_bloc">
+							<div class="name">
+								<a href="http://people.epfl.ch/marija.cvetinovic?lang=en">Marija Cvetinovic</a>
+							</div>
+							<div class="function">
+							Research assistant CODEV;
+							<br>
+							Doctoral student EPFL;
+							</div>
+							<div class="project-role">
+							Scientific coordinator
+							of CODEV-EPFL team
+							</div>
+						</div>
+					</div>
+					<div class="pers_bloc">
+						<div class="leftcontainer">
+							<a href="http://people.epfl.ch/abigail.kern?lang=en">
+								<img class="picture" src="abigail.jpg">
+							</a>	
+						</div>
+						<div class="txt_bloc">
+							<div class="name">
+								<a href="http://people.epfl.ch/marija.cvetinovic?lang=en">Abigail-Laure Kern</a>
+							</div>
+							<div class="function">
+							Research assistant CODEV;
+							<br>
+							Doctoral student EPFL;
+							</div>
+							<div class="project-role">
+							Scientific collaborator
+							of CODEV-EPFL team
+							</div>
+						</div>
 					</div>
 				</div>
 				<!--secondary content area-->
@@ -127,7 +192,6 @@
 							[ENG]
 							<!--<hr>-->
 							</a>
-						
 						<a href="#" class="menu-button-text">
 						<hr>
 						database
