SPUDS output data final design

--- a/SPUDS.html
+++ b/SPUDS.html
@@ -162,12 +162,12 @@
 						</a>						
 					</aside>
 					<aside class="widget_text">
-						<span  style="font-size:15px;">[Formats]
+						<span  style="font-size:15px;">[Gallery]
 						</span>
 						<br>
 						<!--<hr>-->
 						<a href="htts://spuds/text/">
-							<strong> [TEXT] </strong>
+							<strong> [DATA] </strong>
 						</a>
 						<br>
 						<a href="htts://spuds/photo/">
