--- a/epfl.html
+++ b/epfl.html
@@ -98,7 +98,7 @@
 							Adjunct Professor EPFL;
 							</div>
 							<div class="project-role">
-							<strong style="font-size:150%;">PROJECT COORDINATOR</strong>
+							<strong style="font-size:130%; line-height: 20px;">PROJECT COORDINATOR</strong>
 							<br>
 							CODEV-EPFL team leader
 							</div>
@@ -226,12 +226,12 @@
 						</a>						
 					</aside>
 					<aside class="widget_text">
-						<span  style="font-size:15px;">[Formats]
+						<span  style="font-size:15px;">[Gallery]
 						</span>
 						<br>
 						<!--<hr>-->
 						<a href="htts://spuds/text/">
-							<strong> [TEXT] </strong>
+							<strong> [DATA] </strong>
 						</a>
 						<br>
 						<a href="htts://spuds/photo/">
